230103 search 버튼 동작

--- a/index.html
+++ b/index.html
@@ -260,7 +260,13 @@
               <a href="javascript:;"><i class="ri-global-line"></i>&nbsp;ENG</a>
             </li>
             <li>
-              <a href="javascript:;"><i class="ri-search-line"></i></a>
+              <a href="javascript:;" class="search_icon"><i class="ri-search-line"></i></a>
+              <form>
+                <div class="search_bar">
+                  <input type="text" placeholder="검색어를 입력하세요"></input>
+                  <button><i class="ri-search-line"></i></button>
+                </div>
+              </form>
             </li>
           </ul>
         </div>
