--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <meta property="og:description" content="혜주의 관공서 포트폴리오, 본 페이지는 상업적 목적이 없는 구직용 페이지입니다." />
     <meta property="og:url" content="https://hejo47.github.io/KISAweb/" />
     <meta property="og:image" content="img/main/img_one.png" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/remixicon.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
