230103 js 분리 (common, main, js)

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         </div>
         <ul class="header_menu">
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
-            <a href="#">고객서비스</a>
+            <a href="./sub/boardList.html">고객서비스</a>
             <div class="depth2_wrapper">
               <div class="inner" style="height: 343px">
                 <h2>고객서비스</h2>
                 <ul class="depth2 first">
-                  <li><a href="#">주요서비스</a></li>
-                  <li><a href="#">대민웹서비스</a></li>
-                  <li><a href="#">118상담 서비스 안내</a></li>
+                  <li><a href="./sub/boardList.html">주요서비스</a></li>
+                  <li><a href="./sub/boardList.html">대민웹서비스</a></li>
+                  <li><a href="./sub/boardList.html">118상담 서비스 안내</a></li>
                   <li>
                     <a href="#" class="get_depth3">통합신고센터</a>
                     <ul class="depth3">
@@ -966,5 +966,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="js/fullpage.js"></script>
     <script src="./js/common.js"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
