--- a/sub/boardList.html
+++ b/sub/boardList.html
@@ -63,7 +63,7 @@
       <div class="bg"></div>
       <div class="header_wrapper">
         <div class="logo">
-          <a href="../index.html"><img src="../img/logo/logo.png" alt="logo" class="logoImg" /></a>
+          <a href="../index.html"><img src="../img/logo/logo_w.png" alt="logo" class="logoImg" /></a>
         </div>
         <ul class="header_menu">
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
@@ -261,7 +261,7 @@
     <header class="mo">
       <div class="header_wrapper">
         <div class="logo">
-          <a href="https://hejo47.github.io/KISAweb/"><img src="img/logo/logo.png" alt="logo" class="logoImg" /></a>
+          <a href="https://hejo47.github.io/KISAweb/"><img src="/img/logo/logo.png" alt="logo" class="logoImg" /></a>
         </div>
         <ul class="header_menu">
           <li class="depth1">
@@ -434,6 +434,42 @@
       </div>
     </header>
     <div class="overlay"></div>
+
+    <section class="sub_head_title">
+      <div class="container">
+        <h2>알림마당</h2>
+        <div class="sub_head_menu">
+          <a href="../index.html"><i class="ri-home-2-line"></i></a>
+          <i class="ri-arrow-right-s-line"></i>
+          <a href="../index.html">알림마당</a>
+          <i class="ri-arrow-right-s-line"></i>
+          <a href="../index.html">공지사항</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="sub">
+      <div class="container">
+        <div class="sub_title">
+          <h3>공지사항</h3>
+          <div class="title_tool">
+            <div class="print"><i class="ri-printer-line"></i></div>
+            <div class="share"><i class="ri-share-line"></i></div>
+          </div>
+        </div>
+        <div class="sub_top_box">
+          <div class="content_icon">
+            <img src="../img/sub/ic_board_list.png" alt="boardList">
+          </div>
+          <div class="content_text">
+            <p class="notice">한국인터넷진흥원 공지사항입니다.</p>
+            <span class="notice_desc">한국인터넷진흥원의 소식을 신속하고 정확하게 전해드립니다.</span>
+            <p class="view"><span>[공지]</span> 각 분야별 제안서 평가위원 모집<a href="#">자세히 보기</a></p> 
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section>
       <footer>
         <div class="footer_intro">
