230103 서브 보드리스트 완료

--- a/sub/boardList.html
+++ b/sub/boardList.html
@@ -59,11 +59,11 @@
       <a href="#main" class="top_tool"><i class="ri-arrow-up-line"></i>
         <p>TOP</p></a>
     </div>
-    <header class="pc" style="height: 100px">
+    <header class="pc active" style="height: 100px">
       <div class="bg"></div>
       <div class="header_wrapper">
         <div class="logo">
-          <a href="../index.html"><img src="../img/logo/logo_w.png" alt="logo" class="logoImg" /></a>
+          <a href="../index.html"><img src="../img/logo/logo.png" alt="logo" class="logoImg" /></a>
         </div>
         <ul class="header_menu">
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
@@ -465,6 +465,94 @@
             <p class="notice">한국인터넷진흥원 공지사항입니다.</p>
             <span class="notice_desc">한국인터넷진흥원의 소식을 신속하고 정확하게 전해드립니다.</span>
             <p class="view"><span>[공지]</span> 각 분야별 제안서 평가위원 모집<a href="#">자세히 보기</a></p> 
+          </div>
+        </div>
+        <div class="table_wrapper">
+          <div class="table_top">
+            <div class="total">
+              <span>총 <b>001</b>건</span>
+              <span>페이지 <b>1 / 01<b></span>
+            </div>
+            <div class="table_search">
+              <form>
+                <select>
+                  <option value="title">제목</option>
+                  <option value="content">내용</option>
+                  <option value="titcon">제목+내용</option>
+                  <option value="author">글쓴이</option>
+                </select>
+                <input type="text" placeholder="검색어를 입력하세요">
+                <button>검색 <i class="ri-search-line"></i> </button>
+              </form>
+            </div>
+
+
+          </div>
+          <table>
+            <colgroup>
+              <col width="8%">
+              <col width="68%">
+              <col width="8%">
+              <col width="8%">
+              <col width="8%">
+            </colgroup>
+            <thead>
+              <tr>
+                <th>번호</th>
+                <th>제목</th>
+                <th>등록일</th>
+                <th>조회수</th>
+                <th>첨부파일</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>5</td>
+                <td class="notice_title"><a href="#">2023년 개인정보 보호·활용 R&D 연구개발사업(기술개발·표준개발) 신규과제 후보(안) 예고 및 인터넷 공시 공고, 2023년 개인정보 보호·활용 R&D 연구개발사업(기술개발·표준개발) 신규과제 후보(안) 예고 및 인터넷 공시 공고</a></td>
+                <td>2022-12-29</td>
+                <td>111</td>
+                <td><a href="#"><img src="../img/sub/hwp.png" alt="hwp"></a></td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td class="notice_title"><a href="#">2023년 글로벌 개인정보 보호 컴플라이언스 교육 및 세미나 수요조사(~2023.1.25.)</a></td>
+                <td>2022-12-22</td>
+                <td>111</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td class="notice_title"><a href="#">2022년 KISA 정책연구 성과 발표회(12.15.목.) 프로그램북 자료 및 영상 링크</a></td>
+                <td>2022-12-19</td>
+                <td>111</td>
+                <td><a href="#"><img src="../img/sub/pdf.png" alt="pdf"></a></td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td class="notice_title"><a href="#">'홈네트워크 보안가이드' 공고</a></td>
+                <td>2022-12-16</td>
+                <td>111</td>
+                <td><a href="#"><img src="../img/sub/pdf.png" alt="pdf"></a></td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td class="notice_title"><a href="#">한·영 적정성 결정 발효에 따른 우리 기업을 위한 설명회 개최 ㅣ 22.12.20. 16-17시 온라인</a></td>
+                <td>2022-12-13</td>
+                <td>111</td>
+                <td><a href="#"><img src="../img/sub/ic_attach.png" alt="attach"></a></td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="paging">
+            <ul>
+              <li class="active"><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+              <li><a href="#">></a></li>
+              <li><a href="#">>></a></li>
+            </ul>
           </div>
         </div>
       </div>
