--- a/sub/boardList.html
+++ b/sub/boardList.html
@@ -637,6 +637,6 @@
       </footer>
     </section>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="../js/header.js"></script>
+    <script src="../js/sub_header.js"></script>
   </body>
 </html>
