230104 모바일 헤더 함수

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <div class="header_tool">
           <ul>
             <li class="all_menu">
-              <a href="#"><i class="ri-menu-line"></i>&nbsp;전체메뉴</a>
+              <a href="javascript:;" id="all_menu"><i class="ri-menu-line"></i>&nbsp;전체메뉴</a>
             </li>
             <li>
               <a href="#"><i class="ri-global-line"></i>&nbsp;ENG</a>
