230104 모바일 헤더 제작

--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
         <div class="logo">
           <a href="https://hejo47.github.io/KISAweb/"><img src="img/logo/logo.png" alt="logo" class="logoImg" /></a>
         </div>
-        <ul class="header_menu">
+        <ul class="header_menu" style="display:flex;">
+          <li id="close"><i class="ri-close-line"></i></li>
           <li class="depth1">
-            <a href="#">고객서비스</a>
+            <a href="./">고객서비스</a>
             <div class="depth2_wrapper">
-              <h2>고객서비스</h2>
               <ul class="depth2 first">
                 <li><a href="#">주요서비스</a></li>
                 <li><a href="#">대민웹서비스</a></li>
@@ -303,7 +303,6 @@
           <li class="depth1">
             <a href="#">지식플랫폼</a>
             <div class="depth2_wrapper">
-              <h2>지식플랫폼</h2>
               <ul class="depth2 second">
                 <li><a href="#">연구보고서</a></li>
                 <li><a href="#">동향분석</a></li>
@@ -325,7 +324,6 @@
           <li class="depth1">
             <a href="#">사업소개</a>
             <div class="depth2_wrapper">
-              <h2>사업소개</h2>
               <ul class="depth2 third">
                 <li>
                   <a href="#" class="get_depth3">사이버침해대응본부</a>
@@ -378,7 +376,6 @@
           <li class="depth1">
             <a href="#">알림마당</a>
             <div class="depth2_wrapper">
-              <h2>알림마당</h2>
               <ul class="depth2">
                 <li><a href="#">공지사항</a></li>
                 <li><a href="#">보도자료</a></li>
@@ -396,7 +393,6 @@
           <li class="depth1">
             <a href="#">ESG 열린경영</a>
             <div class="depth2_wrapper">
-              <h2>ESG 열린경영</h2>
               <ul class="depth2">
                 <li><a href="#">사전정보공표</a></li>
                 <li><a href="#">정보공개</a></li>
@@ -417,7 +413,6 @@
           <li class="depth1">
             <a href="#">KISA 소개</a>
             <div class="depth2_wrapper">
-              <h2>KISA 소개</h2>
               <ul class="depth2">
                 <li><a href="#">기관장 인사말</a></li>
                 <li><a href="#">연혁</a></li>
@@ -438,10 +433,10 @@
             <li class="all_menu">
               <a href="javascript:;" id="all_menu"><i class="ri-menu-line"></i>&nbsp;전체메뉴</a>
             </li>
-            <li>
+            <li class="mo_lang">
               <a href="#"><i class="ri-global-line"></i>&nbsp;ENG</a>
             </li>
-            <li>
+            <li class="mo_search">
               <a href="#"><i class="ri-search-line"></i></a>
             </li>
           </ul>
