230104 모바일 헤더 제작

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <ul class="header_menu" style="display:flex;">
           <li id="close"><i class="ri-close-line"></i></li>
           <li class="depth1">
-            <a href="./">고객서비스</a>
+            <a href="./sub/boardList.html">고객서비스</a>
             <div class="depth2_wrapper">
               <ul class="depth2 first">
                 <li><a href="#">주요서비스</a></li>
