230104 모바일 헤더 제작

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="logo">
           <a href="https://hejo47.github.io/KISAweb/"><img src="img/logo/logo.png" alt="logo" class="logoImg" /></a>
         </div>
-        <ul class="header_menu" style="display:flex;">
+        <ul class="header_menu" style="display:none;">
           <li id="close"><i class="ri-close-line"></i></li>
           <li class="depth1">
             <a href="./sub/boardList.html">고객서비스</a>
