--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="logo">
           <a href="https://hejo47.github.io/KISAweb/"><img src="img/logo/logo.png" alt="logo" class="logoImg" /></a>
         </div>
-        <ul class="header_menu" style="display:none;">
+        <ul class="header_menu" style="display: none;">
           <li id="close"><i class="ri-close-line"></i></li>
           <li class="depth1">
             <a href="./sub/boardList.html">고객서비스</a>
@@ -916,11 +916,11 @@
             <div class="container">
               <div class="left">
                 <div class="address">
-                  <span>[나주본원] (58324) 전라남도 나주시 진흥길 9 한국인터넷진흥원</span>
-                  <span>[서울청사] (05717) 서울시 송파구 중대로 135 (가락동) IT벤처타워</span>
+                  <span>[주나본원] (58634) 전라남도 주나시 진홍길 82-18 한국인터넷진흥원</span>
+                  <span>[서울청사] (05768) 서울시 송파구 중대로 135-6 (가락동) IT벤처센터</span>
                 </div>
                 <div class="number">
-                  <span>대표번호 : <a href="#">1433-25</a>(수신자 요금 부담)</span>
+                  <span>대표번호 : <a href="#">143-25</a>(수신자 요금 부담)</span>
                   <span>[해킹ㆍ스팸개인정보침해 신고 <a href="#">118</a>]</span>
                 </div>
                 <h6 class="copy">Copyright(C) 2021 KISA. All rights reserved.</h6>
