--- a/sub/boardList.html
+++ b/sub/boardList.html
@@ -12,44 +12,44 @@
 
       gtag("config", "G-ZNF0ED9MNK");
     </script>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="한국인터넷진흥원" />
-    <meta name="robot" content="follow" />
-    <meta name="author" content="강혜주" />
-    <meta name="keyword" content="포트폴리오, 강혜주, 프론트엔드" />
-    <meta property="og:title" content="혜주의 포트폴리오" />
-    <meta property="og:description" content="혜주의 관공서 포트폴리오, 본 페이지는 상업적 목적이 없는 구직용 페이지입니다." />
-    <meta property="og:url" content="https://hejo47.github.io/KISAweb/" />
-    <meta property="og:image" content="img/main/img_one.png" />
-    <link rel="stylesheet" href="../css/common.css" />
-    <link rel="stylesheet" href="../css/sub.css" />
-    <link rel="stylesheet" href="../css/remixicon.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="한국인터넷진흥원">
+    <meta name="robot" content="follow">
+    <meta name="author" content="강혜주">
+    <meta name="keyword" content="포트폴리오, 강혜주, 프론트엔드">
+    <meta property="og:title" content="혜주의 포트폴리오">
+    <meta property="og:description" content="혜주의 관공서 포트폴리오, 본 페이지는 상업적 목적이 없는 구직용 페이지입니다.">
+    <meta property="og:url" content="https://hejo47.github.io/KISAweb/">
+    <meta property="og:image" content="img/main/img_one.png">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/sub.css">
+    <link rel="stylesheet" href="../css/remixicon.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>KISA 한국인터넷진흥원</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="../img/logo/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png" />
+    <link rel="shortcut icon" href="../img/logo/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <!-- <link rel="manifest" href="/manifest.json" /> -->
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <!-- <link rel="manifest" href="/manifest.json"> -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
   </head>
 
   <body>
@@ -63,7 +63,7 @@
       <div class="bg"></div>
       <div class="header_wrapper">
         <div class="logo">
-          <a href="../index.html"><img src="../img/logo/logo.png" alt="logo" class="logoImg" /></a>
+          <a href="../index.html"><img src="../img/logo/logo.png" alt="logo" class="logoImg"></a>
         </div>
         <ul class="header_menu">
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
@@ -261,7 +261,7 @@
     <header class="mo">
       <div class="header_wrapper">
         <div class="logo">
-          <a href="https://hejo47.github.io/KISAweb/"><img src="/img/logo/logo.png" alt="logo" class="logoImg" /></a>
+          <a href="https://hejo47.github.io/KISAweb/"><img src="/img/logo/logo.png" alt="logo" class="logoImg"></a>
         </div>
         <ul class="header_menu">
           <li class="depth1">
@@ -626,10 +626,10 @@
                 </div>
               </div>
               <div class="footer_icon_wrapper">
-                <a href="#"><img src="../img/main/img_ft_goverment.jpg" alt="보다 나은 정부" /></a>
-                <a href="#"><img src="../img/main/wa_web.svg" alt="웹 접근성 마크" /></a>
-                <a href="https://validator.w3.org/check?uri=https://hejo47.github.io/KISAweb/"><img src="https://www.w3.org/QA/Tools/I_heart_validator_lg" alt="html유효성검사" /></a>
-                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://hejo47.github.io/KISAweb/"><img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="css유효성검사" /></a>
+                <a href="#"><img src="../img/main/img_ft_goverment.jpg" alt="보다 나은 정부"></a>
+                <a href="#"><img src="../img/main/wa_web.svg" alt="웹 접근성 마크"></a>
+                <a href="https://validator.w3.org/check?uri=https://hejo47.github.io/KISAweb/"><img src="https://www.w3.org/QA/Tools/I_heart_validator_lg" alt="html유효성검사"></a>
+                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://hejo47.github.io/KISAweb/"><img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="css유효성검사"></a>
               </div>
             </div>
           </div>
