--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-    <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
@@ -65,14 +64,10 @@
       <button>닫기</button>
     </div>
     <div class="toolbar_con">
-      <a href="#" class="search_tool"
-        ><i class="ri-search-line"></i>
-        <p>전체검색</p></a
-      >
-      <a href="#main" class="top_tool"
-        ><i class="ri-arrow-up-line"></i>
-        <p>TOP</p></a
-      >
+      <a href="#" class="search_tool"><i class="ri-search-line"></i>
+        <p>전체검색</p></a>
+      <a href="#main" class="top_tool"><i class="ri-arrow-up-line"></i>
+        <p>TOP</p></a>
     </div>
     <header class="pc" style="height: 100px">
       <div class="bg"></div>
