--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="bg"></div>
       <div class="header_wrapper">
         <div class="logo">
-          <a href="#main"><img src="img/logo/logo_w.png" alt="logo" class="logoImg"></a>
+          <a href="#main"><h1 class="blind">한국인터넷진흥원</h1><img src="img/logo/logo_w.png" alt="logo" class="logoImg"></a>
         </div>
         <ul class="header_menu">
           <li class="depth1" onmouseenter="mainHeaderEnterHandler(this)" onmouseleave="mainHeaderLeaveHandler(this)">
