230116 section2 bgimg 함수 변경

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             <h6 class="business_text1">Business</h6>
             <h2 class="kisa_text1">KISA 사업</h2>
           </div>
-          <div class="business_1">
+          <div class="business_1" id="business_1">
             <span class="number_1">01</span>
             <div class="second_text">
               <h6 class="business_text">Achievements</h6>
@@ -571,7 +571,7 @@
               </div>
             </div>
           </div>
-          <div class="business_1">
+          <div class="business_1" id="business_2">
             <span class="number_1">02</span>
             <div class="second_text">
               <h6 class="business_text">Report Hacking</h6>
@@ -592,7 +592,7 @@
               </ul>
             </div>
           </div>
-          <div class="business_1">
+          <div class="business_1" id="business_3">
             <span class="number_1">03</span>
             <div class="second_text">
               <h6 class="business_text">Main Service</h6>
