230210 [강혜주] 메인 날씨 OPEN API 추가

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
   </head>
 
   <body>
@@ -474,6 +475,7 @@
           </li>
         </ul>
         <ul class="slidebar container">
+          <li id="castContents"></li>
           <li id="mainSlidePrev"><i class="ri-arrow-left-s-line"></i></li>
           <li id="mainSlidePause"><i class="ri-pause-mini-fill"></i></li>
           <li id="mainSlideNext"><i class="ri-arrow-right-s-line"></i></li>
@@ -919,6 +921,7 @@
                   <span>[해킹ㆍ스팸개인정보침해 신고 <a href="#">118</a>]</span>
                 </div>
                 <h6 class="copy">Copyright(C) 2021 KISA. All rights reserved.</h6>
+                <span><a href="https://www.data.go.kr/iim/api/selectAPIAcountView.do">날씨 OPEN API: https://www.data.go.kr/iim/api/selectAPIAcountView.do</span>
               </div>
               <div class="right">
                 <div class="trans_site_wrap">
@@ -958,5 +961,7 @@
     <script src="./js/common.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/date.js"></script>
+    <script src="./js/cast.js"></script>
   </body>
 </html>
