230210 [강혜주] footer opencode, cc 추가

--- a/index.html
+++ b/index.html
@@ -950,6 +950,8 @@
                   <a href="#"><img src="./img/main/wa_web.svg" alt="웹 접근성 마크"></a>
                   <a href="https://validator.w3.org/check?uri=https://hejo47.github.io/KISAweb/"><img src="https://www.w3.org/QA/Tools/I_heart_validator_lg" alt="html유효성검사"></a>
                   <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://hejo47.github.io/KISAweb/"><img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="css유효성검사"></a>
+                  <a href="https://ccl.cckorea.org/about/"><img src="./img/main/cc.png" alt="cc"></a>
+                  <a href="https://www.kogl.or.kr/info/license.do"><img src="./img/main/opencode.jpg" alt="opencode"></a>
                 </div>
               </div>
             </div>
